Sonar Issue fixes